--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@gsap/react": "^2.1.1",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "@phosphor-icons/react": "^2.1.5",
     "bootstrap": "^5.3.3",
     "gsap": "^3.12.5",
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
+    "react": "^18.2.0",
     "react-countup": "^6.5.3",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "react-visibility-sensor": "^5.1.1",
     "sass": "^1.76.0",
     "sharp": "^0.33.3",
     "swiper": "^11.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1",
     "vite-plugin-require": "^1.2.14"
   },
   "devDependencies": {
